Almost done with Django girls tutorial, deployment push

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,4 @@
-{% load staticfile %}
+{% load staticfiles %}
 <html>
     <head>
         <title>Haus of Villie Vetz</title>
@@ -15,7 +15,7 @@
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
-                    {% block conten %}
+                    {% block content %}
                     {% endblock %}
                 </div>
             </div>
